page(leadership): wip, v7, js into functions, cursor

--- a/leadership.htm
+++ b/leadership.htm
@@ -93,7 +93,7 @@
 								</p>
 								<p>
 									<a href="#"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer">
 										Our annual report
 									</a>
 								</p>
@@ -123,7 +123,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -148,7 +148,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -173,7 +173,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -198,7 +198,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -223,7 +223,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -248,7 +248,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -273,7 +273,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -298,7 +298,7 @@
 								<div class="mb-6">Chief Executive Officer</div>
 								<div class="mt-auto">
 									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
@@ -329,6 +329,17 @@
 							-->
 						<div data-bio-container>
 							<div class="bg-white text-left p-4 -m-4 outline outline-1 rounded-lg">
+								<button
+									class="absolute -top-8 -right-8 rounded-full size-8 grid place-items-center cursor-pointer"
+									data-close aria-label="Close">
+									<svg width="20" height="20" viewBox="0 0 20 20" fill="none" aria-hidden="true"
+										class="pointer-events-none">
+										<line x1="4" y1="4" x2="16" y2="16" stroke="currentColor" stroke-width="2"
+											stroke-linecap="round" />
+										<line x1="16" y1="4" x2="4" y2="16" stroke="currentColor" stroke-width="2"
+											stroke-linecap="round" />
+									</svg>
+								</button>
 								<p>
 
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque,
