feat(index): Update index with new pages.

--- a/index.htm
+++ b/index.htm
@@ -33,44 +33,61 @@
 		</header>
 
 		<ul role="list" class="grid grid-cols-1 gap-x-6 gap-y-8 lg:grid-cols-3 xl:gap-x-8">
-			<li class="row-span-3 overflow-hidden rounded-xl border border-slate-200 bg-white">
+			<li class="row-span-3 overflow-hidden rounded-xl border border-slate-200 bg-white" data-list="pages">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">Pages</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
 					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./leadership.htm" target="_blank"
+								class="text-slate-900 hover:underline">Leadership</a></dt>
+						<dd class="text-sm text-slate-500">June 16, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./about-us.htm" target="_blank"
+								class="text-slate-900 hover:underline">About Us</a></dt>
+						<dd class="text-sm text-slate-500">June 15, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./operations.htm" target="_blank"
+								class="text-slate-900 hover:underline">Operations</a></dt>
+						<dd class="text-sm text-slate-500">June 15, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./members.htm" target="_blank"
+								class="text-slate-900 hover:underline">Members</a></dt>
+						<dd class="text-sm text-slate-500">June 15, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./our-energy-mix.htm" target="_blank"
 								class="text-slate-900 hover:underline">Energy Mix</a></dt>
-						<dd class="text-sm text-slate-500">May 5, 2025</dd>
+						<dd class="text-sm text-slate-500">June 13, 2025</dd>
 					</div>
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./the-cooperative-difference.htm" target="_blank"
 								class="text-slate-900 hover:underline">Cooperative Difference</a></dt>
-						<dd class="text-sm text-slate-500">May 5, 2025</dd>
+						<dd class="text-sm text-slate-500">June 13, 2025</dd>
 					</div>
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./erp.htm" target="_blank"
 								class="text-slate-900 hover:underline">ERP</a></dt>
 						<dd class="text-sm text-slate-500">May 5, 2025</dd>
 					</div>
-
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./powering-future.htm" target="_blank"
 								class="text-slate-900 hover:underline">Powering the Future</a></dt>
 						<dd class="text-sm text-slate-500">May 5, 2025</dd>
 					</div>
-
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./quality-install.htm" target="_blank"
 								class="text-slate-900 hover:underline">Quality Install Program</a></dt>
 						<dd class="text-sm text-slate-500">Feb 26, 2025</dd>
 					</div>
 
-
 				</dl>
 			</li>
-			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
+			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white" data-list="posts">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">Posts</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
@@ -89,7 +106,7 @@
 
 				</dl>
 			</li>
-			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
+			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white" data-list="obr">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">OBR</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
@@ -107,7 +124,7 @@
 					</div>
 				</dl>
 			</li>
-			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
+			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white" data-list="western-watts">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">Western Watts</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
@@ -126,7 +143,7 @@
 				</dl>
 			</li>
 
-			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
+			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white" data-list="annual-report">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">Annual Report</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
@@ -144,7 +161,7 @@
 					</div>
 				</dl>
 			</li>
-			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
+			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white" data-list="ungrouped">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">Ungrouped</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
