page(energy-mix): Image change, stats format

--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -182,8 +182,8 @@
 				<!-- Moving -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="relative aspect-video sm:aspect-auto">
-						<img src="https://tristate.coop/sites/default/files/images/escalante-solar-800x485.jpg"
-							alt="Escalante Solar facility" class="absolute inset-0 w-full h-full object-cover" />
+						<img src="assets/images/escalante-solar-2-800x600.jpg" alt="Escalante Solar facility"
+							class="absolute inset-0 w-full h-full object-cover" />
 					</div>
 					<div class="bg-gray text-black px-8 py-12 sm:text-left text-center flex items-center h-full">
 						<div class="space-y-4 max-w-md mx-auto">
@@ -290,7 +290,8 @@
 				</section>
 
 				<!-- Stats -->
-				<section class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] lg:px-16 lg:py-24">
+				<section
+					class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] sm:grid sm:place-content-center lg:px-16 lg:py-24">
 					<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
 						<div class="space-y-2">
 							<p class="text-2xl font-bold">1,250 MW</p>
