page(about): Images, links.

--- a/about-us.htm
+++ b/about-us.htm
@@ -44,8 +44,8 @@
 			<div class="l-constrain--no-padding">
 				<!-- Hero -->
 				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
-					<img src="https://placehold.co/1200x600?text=Linemen+Working" alt="Lineman at work"
-						class="absolute inset-0 w-full h-full object-cover z-0" />
+					<img src="assets/images/linemen-meeting-1200x500.jpg" alt="Lineman at work"
+						class="absolute inset-0 w-full h-full object-cover object-left z-0" />
 					<div
 						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 						<h1 class="text-4xl md:text-5xl font-serif text-balance">
@@ -63,16 +63,13 @@
 
 						<p>
 							Tri-State began as a not-for-profit association of electric co-ops in 1952 with the goal of
-							providing electricity to
-							rural
-							homes, businesses and farms across the West—and that’s still what drives us today. In
-							accordance with cooperative
-							principles, our mission is to supply our <a href="#">member systems</a> with reliable,
-							affordable and
-							responsible electricity.
+							providing electricity to rural homes, businesses and farms across the West—and that’s still
+							what drives us today. In accordance with cooperative principles, our mission is to supply
+							our <a href="https://tristate.coop/member-list">member systems</a> with reliable, affordable
+							and responsible electricity.
 
 						</p>
-						<p><a href="#">Learn how we’re keeping that promise</a>.</p>
+						<p><a href="https://tristate.coop/powering-future">Learn how we’re keeping that promise</a>.</p>
 					</div>
 				</section>
 
@@ -80,7 +77,7 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/600x400?text=Hard+Hat+Guy" alt="Man in hard hat"
+							<img src="assets/images/man-in-tunnel-in-hard-hat-800x600.jpg" alt="Man in hard hat"
 								class="absolute inset-0 w-full h-full object-cover" />
 						</div>
 					</div>
@@ -101,7 +98,7 @@
 
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/podcast-western-watts"
 										class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-black">
 										Listen to the podcast
 									</a>
@@ -115,7 +112,7 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/700x600?text=Family+with+baby" alt="Snocat video thumbnail"
+							<img src="assets/images/family-welcomes-new-baby-800x600.jpg" alt="Snocat video thumbnail"
 								class="absolute size-full object-cover" />
 							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
 								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
@@ -141,7 +138,7 @@
 									power. As a co-op, we’re putting people first.
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/operations"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
 										How we do it
 									</a>
@@ -230,8 +227,9 @@
 									holds, we’ll power it.
 								</p>
 								<p>
-									<a href="#"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
+									<a href="https://careers.tristate.coop/?_gl=1*12q2spo*_gcl_au*NTA3MDUzODYwLjE3NDk1MDE0ODEuNzM0MzUxNDMzLjE3NDk3NjUyNTQuMTc0OTc2NTI1Mw.."
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										target="_blank">
 										Careers at Tri-State
 									</a>
 								</p>
@@ -241,7 +239,8 @@
 				</section>
 
 				<!-- Stats -->
-				<section class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] lg:px-16 lg:py-24">
+				<section
+					class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] sm:grid sm:place-content-center lg:px-16 lg:py-24">
 					<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
 						<div class="space-y-2">
 							<p class="text-2xl font-bold">450+</p>
