--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,12 @@
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
 					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./about-us.htm" target="_blank"
+								class="text-slate-900 hover:underline">About
+								Us</a></dt>
+						<dd class="text-sm text-slate-500">June 16, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./our-energy-mix.htm" target="_blank"
 								class="text-slate-900 hover:underline">Energy Mix</a></dt>
 						<dd class="text-sm text-slate-500">June 16, 2025</dd>
@@ -49,11 +55,7 @@
 								class="text-slate-900 hover:underline">Leadership</a></dt>
 						<dd class="text-sm text-slate-500">June 16, 2025</dd>
 					</div>
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./about-us.htm" target="_blank"
-								class="text-slate-900 hover:underline">About Us</a></dt>
-						<dd class="text-sm text-slate-500">June 15, 2025</dd>
-					</div>
+
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./operations.htm" target="_blank"
 								class="text-slate-900 hover:underline">Operations</a></dt>
