page(energy): Link update

--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -199,7 +199,7 @@
 								lineworkers who work tirelessly to maintain our system.
 							</p>
 							<p>
-								<a href="/transmission-maintenance"
+								<a href="https://tristate.coop/operations"
 									class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
 									Transmission maintenance
 								</a>
