page(members): Images and links

--- a/members.htm
+++ b/members.htm
@@ -2184,7 +2184,7 @@
 								that is the foundation of the co-op model.
 							</p>
 							<p>
-								<a href="#"
+								<a href="https://tristate.coop/podcast-western-watts-cooperative-roots-tim-rabon-tri-state"
 									class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
 									Listen to the podcast
 								</a>
@@ -2192,8 +2192,8 @@
 						</div>
 					</div>
 					<div class="relative aspect-video sm:aspect-auto">
-						<img src="https://placehold.co/600x400?text=Chairman" alt="close-up of wind turbine"
-							class="absolute inset-0 w-full h-full object-cover" data-att-replace="Chairman" />
+						<img src="assets/images/tim-rabon-stump-wall-800x600.jpg" alt="close-up of wind turbine"
+							class="absolute inset-0 w-full h-full object-cover" data-att-replace="Tim Rabon" />
 					</div>
 				</section>
 
@@ -2233,7 +2233,7 @@
 				<!-- "Bridging..." -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-						<img src="https://placehold.co/600x400?text=Video+Thumb" alt="Video thumbnail"
+						<img src="assets/images/harvester-800x600.jpg" alt="Video thumbnail"
 							class="absolute size-full object-cover" data-att-replace="Harvester" />
 						<a href="VIDEO_URL" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
 							data-featherlight-iframe-height="281" data-featherlight-iframe-width="500" class="relative">
@@ -2256,7 +2256,7 @@
 								consumers. Together, we can Electrify and Save®.
 							</p>
 							<p>
-								<a href="#"
+								<a href="https://tristate.coop/programs"
 									class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-gray">
 									Our programs
 								</a>
