page(leadership): Layout fixes.  Bug with grid cover.

--- a/leadership.htm
+++ b/leadership.htm
@@ -92,7 +92,7 @@
 
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/annual-report"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer">
 										Our annual report
 									</a>
@@ -110,11 +110,12 @@
 						Tri-State’s leadership team
 					</h2>
 
-					<div class="mt-20 relative grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4" data-leadership>
+					<div class="mt-20 relative grid gap-y-12 sm:p-1 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4"
+						data-leadership>
 						<div class="grid-cover" data-cover></div>
 
 						<div class="p-4 outline outline-solid outline-1 group" data-card="duane">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -143,7 +144,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="elda">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/elda-de-la-pe%C3%B1a-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -171,7 +172,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="bob">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/bob-frankmore-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -202,7 +203,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="clifton">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/clifton-karnei-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -234,7 +235,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="chris">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/chris-pink-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -268,7 +269,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="reg">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/reg-rudolph-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -299,7 +300,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="jay">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/jay-sturhahn-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -336,7 +337,7 @@
 							</div>
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="lisa">
-							<div class="flex flex-col">
+							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/lisa-tiffin-v2-400x500.jpg"
 										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
@@ -422,7 +423,7 @@
 				<!-- "Cooperative leadership live..." -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
-						<div class="relative aspect-video sm:aspect-auto sm:h-full">
+						<div class="relative aspect-[4/3] sm:aspect-auto sm:h-full">
 							<img src="assets/images/western-watts-host-and-guest-1.jpg"
 								alt="Set of Western Watts podcast with host and guest"
 								class="absolute inset-0 w-full h-full object-cover" />
@@ -443,7 +444,7 @@
 									of grassroots spirit and forward-thinking insight.
 								</p>
 								<p>
-									<a href="/podcast-western-watts"
+									<a href="https://tristate.coop/podcast-western-watts-Tri-State-2025-Annual-Meeting"
 										class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-gray">
 										Listen to the podcast
 									</a>
