page(battery): File manager urls

--- a/battery-resource.htm
+++ b/battery-resource.htm
@@ -29,7 +29,7 @@
 
 <body id="main" class="block-region-content">
 	<section class="relative min-h-[50vh] sm:min-h-[400px] z-0 lg:h-[500px] lg:min-h-0">
-		<img src="assets/images/battery-hero.jpg" alt="Battery storage facility"
+		<img src="https://tristate.coop/sites/default/files/images/battery-hero.jpg" alt="Battery storage facility"
 			class="absolute inset-0 w-full h-full object-cover z-0" />
 	</section>
 
@@ -52,7 +52,7 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="assets/images/escalante-solar-nm-event-2023-021.jpg" alt="Solar array"
+				<img src="https://tristate.coop/sites/default/files/images/escalante-solar-nm-event-2023-021.jpg" alt="Solar array"
 					class="absolute inset-0 w-full h-full object-cover" />
 			</div>
 		</div>
@@ -150,7 +150,7 @@
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
 				<figure class="relative w-full h-full">
-					<img src="assets/images/ts-line-repair.jpg" alt="Line repair work"
+					<img src="https://tristate.coop/sites/default/files/images/ts-line-repair.jpg" alt="Line repair work"
 						class="absolute h-full w-full object-cover">
 					<figcaption
 						class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
@@ -183,7 +183,7 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="assets/images/red-feather-lakes.jpg" alt="Red Feather Lakes"
+				<img src="https://tristate.coop/sites/default/files/images/red-feather-lakes.jpg" alt="Red Feather Lakes"
 					class="absolute inset-0 w-full h-full object-cover" /> <a
 					class="absolute inset-0 flex items-center justify-center z-10" data-featherlight="iframe"
 					data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
