page(battery): Final touches

--- a/battery-resource.htm
+++ b/battery-resource.htm
@@ -33,7 +33,7 @@
 			class="absolute inset-0 w-full h-full object-cover z-0" />
 	</section>
 
-	<section class="px-8 py-16 text-center text-balance sm:min-h-[400px] sm:grid sm:place-content-center">
+	<section class="px-8 pb-16 text-center text-balance sm:min-h-[400px] sm:grid sm:place-content-center">
 		<div class="mx-auto max-w-2xl space-y-4">
 			<h2 class="font-serif font-light text-3xl">
 				Good for the grid
@@ -52,8 +52,8 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="https://tristate.coop/sites/default/files/images/escalante-solar-nm-event-2023-021.jpg" alt="Solar array"
-					class="absolute inset-0 w-full h-full object-cover" />
+				<img src="https://tristate.coop/sites/default/files/images/escalante-solar-nm-event-2023-021.jpg"
+					alt="Solar array" class="absolute inset-0 w-full h-full object-cover" />
 			</div>
 		</div>
 		<div>
@@ -150,8 +150,8 @@
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
 				<figure class="relative w-full h-full">
-					<img src="https://tristate.coop/sites/default/files/images/ts-line-repair.jpg" alt="Line repair work"
-						class="absolute h-full w-full object-cover">
+					<img src="https://tristate.coop/sites/default/files/images/ts-line-repair.jpg"
+						alt="Line repair work" class="absolute h-full w-full object-cover">
 					<figcaption
 						class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
 						<a href="https://tristate.coop/storm-response-illustrates-importance-planning-collaboration-and-resiliency"
@@ -183,8 +183,8 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="https://tristate.coop/sites/default/files/images/red-feather-lakes.jpg" alt="Red Feather Lakes"
-					class="absolute inset-0 w-full h-full object-cover" /> <a
+				<img src="https://tristate.coop/sites/default/files/images/red-feather-lakes.jpg"
+					alt="Red Feather Lakes" class="absolute inset-0 w-full h-full object-cover" /> <a
 					class="absolute inset-0 flex items-center justify-center z-10" data-featherlight="iframe"
 					data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 					data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/Cj7umAbenoY">
@@ -228,12 +228,10 @@
 				<figure class="grid place-content-center p-6 relative z-10 min-h-[400px] lg:px-12">
 					<blockquote
 						class="m-0 p-0 border-0  font-bold text-justify  text-gray-900 lg:text-lg lg:leading-tight">
-						If we can get in and do these large-scale projects, it may be
-						expensive up front but think it's really important for public
-						health and safety. It's all about keeping the lights on and
-						doing everything we can to protect the communities we serve
-						and that starts with protecting the infrastructure that
-						transmits their power.
+						If we can get in and do these large-scale projects, it may be expensive up front but think it's
+						really important for public health and safety. It’s all about keeping the lights on and doing
+						everything we can to protect the communities we serve and that starts with protecting the
+						infrastructure that transmits their power.
 					</blockquote>
 					<figcaption
 						class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif leading-tight">
