--- a/community-benefits.htm
+++ b/community-benefits.htm
@@ -22,6 +22,13 @@
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 
+
+	<!-- SWIPER FILES -->
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_9_3_2-8fbdf4ce96211052d13dbe3c35baf3a9.css?sk35jq" />
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_esg-32bb8660ccea9c5807144db1517747a2.css?sk35jq" />
+	<!-- SWIPER FILES -->
 	<link rel="stylesheet" href="assets/css/build.css" />
 
 
@@ -47,7 +54,7 @@
 				</section>
 
 				<!-- Our Community Benefits Program -->
-				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
+				<section class="px-8 py-16 text-center text-balance sm:min-h-[400px] sm:grid sm:place-content-center">
 					<div class="mx-auto max-w-2xl space-y-4">
 						<h2 class="font-serif font-light text-3xl">
 							Our Community Benefits Program
@@ -69,7 +76,7 @@
 				</section>
 
 				<!-- Projects -->
-				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center bg-navy text-white">
+				<!-- <section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center bg-navy text-white">
 					<div class="mx-auto max-w-2xl space-y-4">
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 							<div class="text-center">
@@ -98,39 +105,76 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
+
 
 				<!-- SLIDER -->
+				<section class="min-h-96 sm:min-h-[400px]">
+					<div class="swiper max-w-[1200px] h-[400px]">
+						<div class="swiper-wrapper">
+							<!-- SLIDE 1 : IMAGE WITH CAPTION -->
+							<div class="swiper-slide aspect-video sm:w-2/3">
+								<figure class="relative w-full h-full">
+									<img src="https://tristate.coop/sites/default/files/images/tristate-beneficial-electrification-truck-800x450.jpg"
+										alt="Tri-State Electrification Programs"
+										class="absolute h-full w-full object-cover">
+									<figcaption
+										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
+										<a href="https://tristate.coop/electrify-and-save" class="text-white">Learn
+											about Tri-State
+											Electrification Programs</a>
+									</figcaption>
+								</figure>
+							</div>
 
-				<!-- SLIDE 1 : IMAGE WITH CAPTION -->
+							<!-- SLIDE 2 : QUOTE -->
+							<div class="swiper-slide sm:w-1/2">
+								<div
+									class="flex items-center justify-center relative h-full w-full text-[#3d4d55] bg-white overflow-hidden">
+									<span
+										class="absolute top-0 left-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top -translate-y-1/4 z-0"
+										style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px)"></span>
+									<span
+										class="absolute bottom-0 right-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top z-0"
+										style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px); transform: rotate(180deg) translate(0%, -25%)"></span>
+									<figure class="grid place-content-center p-6 relative z-10 min-h-[400px] lg:px-12">
+										<blockquote
+											class="m-0 p-0 border-0  font-bold text-justify  text-gray-900 lg:text-lg lg:leading-tight">
+											Together, we can serve growth, reduce risks and hedge against tightening
+											energy markets to benefit our members and the communities they serve across
+											the West, remaining focused on the needs of all of our members as we move
+											forward together.
+										</blockquote>
+										<figcaption
+											class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif leading-tight">
+											Duane Highley, Tri-State CEO
+										</figcaption>
+									</figure>
+								</div>
+							</div>
 
-				Learn about Tri-State Electrification Programs
+							<!-- SLIDE 3 : IMAGE WITH CAPTION -->
+							<div class="swiper-slide aspect-video sm:w-2/3">
+								<figure class="relative w-full h-full">
+									<img src="https://tristate.coop/sites/default/files/images/trucks-on-dirt-road-near-transmission-lines-800x450.jpg"
+										alt="Community Benefits" class="absolute h-full w-full object-cover">
+									<figcaption
+										class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
+										We're lorem ipsum dolor sit amet consectetur adipisicing elit.
+									</figcaption>
+								</figure>
+							</div>
+						</div>
 
-				<!-- /SLIDE 1 -->
-
-
-				<!-- SLIDE 2 : QUOTE -->
-
-				Together, we can serve growth, reduce risks and
-				hedge against tightening energy markets to benefit
-				our members and the communities they serve across
-				the West, remaining focused on the needs of all of
-				our members as we move forward together.
-
-				Duane Highley, Tri-State CEO
-
-				<!-- /SLIDE 2 -->
-
-				<!-- SLIDE 3 : IMAGE WITH CAPTION  -->
-
-				We're lorem ipsum dolor sit amet consectetur adipisicing elit.
-				<!-- /SLIDE 3 -->
-
-
+						<div class="swiper-pagination">&nbsp;</div>
+						<div class="swiper-button-prev">&nbsp;</div>
+						<div class="swiper-button-next">&nbsp;</div>
+					</div>
+				</section>
 				<!-- /SLIDER -->
 
 				<!-- Upcoming projects -->
-				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center bg-gray">
+				<!-- <section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center bg-gray">
 					<div class="mx-auto max-w-2xl space-y-4">
 						<h2 class="font-serif font-light text-3xl">
 							Upcoming projects
@@ -150,10 +194,10 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 				<!-- Get in touch -->
-				<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
+				<section class="px-8 pt-16 text-center text-balance sm:grid sm:place-content-center">
 					<div class="mx-auto max-w-2xl space-y-4">
 						<h2 class="font-serif font-light text-3xl">
 							Get in touch
@@ -170,6 +214,30 @@
 			</div>
 		</div>
 	</main>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?sk35jq"></script>
+	<script>
+		const swiperConfig = {
+			slidesPerView: 'auto',
+			pagination: {
+				el: '.swiper-pagination',
+			},
+			navigation: {
+				nextEl: '.swiper-button-next',
+				prevEl: '.swiper-button-prev',
+			},
+			breakpoints: {
+				600: {
+					centeredSlides: true,
+					initialSlide: 1,
+				},
+			},
+		};
+
+		document.querySelectorAll('.swiper').forEach(swiper => {
+			new Swiper(swiper, swiperConfig);
+		});
+	</script>
 </body>
 
 </html>
