--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -22,21 +22,13 @@
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/block_ts_content-785a359dd81cb85e1c6dbeea859bb4d3.css?sk35jq" />
-	<!-- <link rel="stylesheet"
-			href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" /> -->
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/general_rules-4adfb9f0efdb9fa703808293512b156d.css?sk35jq" />
-	<!-- <link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" /> -->
+
+	<!-- SWIPER FILES -->
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_9_3_2-8fbdf4ce96211052d13dbe3c35baf3a9.css?sk35jq" />
-	<!-- <link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_esg-32bb8660ccea9c5807144db1517747a2.css?sk35jq" /> -->
 	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" />
-
+		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_esg-32bb8660ccea9c5807144db1517747a2.css?sk35jq" />
+	<!-- SWIPER FILES -->
 
 	<link rel="stylesheet" href="assets/css/build.css" />
 
@@ -744,12 +736,81 @@
 
 				</section>
 
+				<!-- Slider -->
+				<section class="bg-white sm:grid sm:place-content-center" style="--swiper-theme-color: #3d4d55">
+					<!-- Slider main container -->
+					<div class="swiper p-0 pb-10 bg-white"><!-- Additional required wrapper -->
+						<div class="swiper-wrapper h-[220px] lg:h-[350px]"><!-- Placeholder slides -->
+							<div class="swiper-slide sm:w-[60%]">
+								<div
+									class="flex items-center justify-center relative h-full w-full text-[#3d4d55] bg-white overflow-hidden">
+									<figure class="w-3/4 relative z-10">
+										<blockquote
+											class="m-0 p-0 border-0 lg:text-lg font-bold text-justify text-gray-900">
+											What we're
+											building now is going to serve our members into the 2060s. It's not just our
+											kids, but our
+											grandkids. They're going to benefit from what we're building today.
+										</blockquote>
+
+										<figcaption
+											class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif">
+											Duane
+											Highley, Tri-State CEO</figcaption>
+									</figure>
+								</div>
+							</div>
+
+							<div class="swiper-slide relative w-full box-border sm:w-[60%]">
+								<figure class="relative w-full h-full"><img alt=""
+										class="absolute h-full w-full object-cover"
+										src="https://tristate.coop/sites/default/files/images/escalante-solar-800x485.jpg" />
+									<figcaption
+										class="absolute box-border bottom-0 z-[1] h-auto bg-black/50 w-full text-white text-center border-0">
+										200 MW Escalante Solar Project near Grants, New Mexico</figcaption>
+								</figure>
+							</div>
+
+							<div class="swiper-slide relative w-full sm:w-[60%]">
+								<figure class="relative w-full h-full"><a class="absolute h-full w-full"
+										href="https://tristate.coop/susan-hunter-annual-report-2023"><img alt=""
+											class="absolute h-full w-full object-cover"
+											src="https://tristate.coop/sites/default/files/blog/content-images/0524%20Susan%20Hunter_Blog1_1200x628.jpg" />
+									</a>
+
+									<figcaption
+										class="absolute box-border bottom-0 z-[1] h-auto bg-black/50 w-full text-white text-center border-0">
+										<a class="absolute h-full w-full"
+											href="https://tristate.coop/susan-hunter-annual-report-2023">Diversifying
+											Our Portfolio -
+											<u>Learn More</u> </a>
+									</figcaption>
+									<a class="absolute h-full w-full"
+										href="https://tristate.coop/susan-hunter-annual-report-2023"> </a>
+								</figure>
+							</div>
+						</div>
+						<!-- If we need pagination -->
+
+						<div class="swiper-pagination">&nbsp;</div>
+						<!-- If we need navigation buttons -->
+
+						<div class="swiper-button-prev">&nbsp;</div>
+
+						<div class="swiper-button-next">&nbsp;</div>
+					</div>
+				</section>
+
 			</div>
 		</div>
 	</main>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="./assets/js/charts.js"></script>
 	<script src="./assets/js/map-energy-mix.js"></script>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?sk35jq"></script>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_tailwind-326cfbac0aac0a21b8bb152ff68ec3ef.js?sxfxx0"></script>
 </body>
 
 </html>
